--- a/src/global-components/PaymentForm/InputField/InputField.scss
+++ b/src/global-components/PaymentForm/InputField/InputField.scss
@@ -1,24 +1,24 @@
 .input-field {
-    border-radius: 50px;
-    border: 1px solid #494949;
-    background-color: #121212;
-    color: #fff;
-    width: 100%;
-    height: 56px;
-    padding: 20px 32px 19px;
-    font-size: 14px;
-    transition: .2s;
+  border-radius: 50px;
+  border: 1px solid #494949;
+  background-color: #121212;
+  color: #fff;
+  width: 100%;
+  height: 56px;
+  padding: 20px 32px 19px;
+  font-size: 14px;
+  transition: 0.2s;
 
-    &::placeholder {
-        color: #696969;
-    }
+  &::placeholder {
+    color: #696969;
+  }
 
-    &:hover {
-        border-color: #696969;
-    }
+  &:hover {
+    border-color: #696969;
+  }
 
-    &:focus {
-        outline: none;
-        border-color: #696969;
-    }
+  &:focus {
+    outline: none;
+    border-color: #696969;
+  }
 }
