--- a/src/global-components/PaymentForm/SimpleForm/SimpleForm.scss
+++ b/src/global-components/PaymentForm/SimpleForm/SimpleForm.scss
@@ -1,78 +1,82 @@
 .SimpleForm {
-    &__container {
-        padding: 36px 16px 40px;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+  &__container {
+    padding: 36px 16px 40px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-        @media (min-width: 834px) {
-            padding: 116px 197px 100px;
-            align-items: center;
-        }
-
-        @media (min-width: 1440px) {
-            align-items: unset;
-            padding: 203px 64px;
-        }
-
-        button {
-            height: 56px;
-            border-radius: 60px;
-            border: none;
-            font-weight: 700;
-            background-color: var(--color-green-500);
-            transition: .2s;
-            margin-top: 32px;
-            width: 100%;
-
-            &:hover {
-                cursor: pointer;
-                background-color: var(--color-green-700);
-            }
-
-            &:active {
-                background-color: var(--color-green-900);
-            }
-
-            &:disabled {
-                background-color: #242424;
-                color: #494949;
-                cursor: not-allowed;
-            }
-        }
+    @media (min-width: 834px) {
+      padding: 116px 197px 100px;
+      align-items: center;
     }
 
-    &__header {
-        font-size: 24px;
-        font-weight: 700;
-        max-width: 136px;
-        margin-bottom: 32px;
-
-        @media (min-width: 834px) {
-            font-size: 40px;
-            text-align: center;
-            max-width: 227px;
-            margin-bottom: 40px;
-        }
-
-        @media (min-width: 1440px) {
-            text-align: left;
-        }
+    @media (min-width: 1440px) {
+      align-items: unset;
+      padding: 203px 64px;
     }
 
-    &__form {
-        display: flex;
-        flex-direction: column;
-        gap: 14px;
+    button {
+      height: 56px;
+      border-radius: 60px;
+      border: none;
+      font-weight: 700;
+      background-color: var(--color-green-500);
+      transition: 0.2s;
+      margin-top: 32px;
+      width: 100%;
 
-        &-flex {
-            display: flex;
-            gap: 4%;
+      &:hover {
+        cursor: pointer;
+        background-color: var(--color-green-700);
+      }
 
-            > *:last-child {
-                width: 57%;
-            }
-        }
+      &:active {
+        background-color: var(--color-green-900);
+      }
+
+      &:disabled {
+        background-color: #242424;
+        color: #494949;
+        cursor: not-allowed;
+      }
     }
+  }
+
+  &__header {
+    font-size: 24px;
+    font-weight: 700;
+    max-width: 136px;
+    margin-bottom: 32px;
+
+    @media (min-width: 834px) {
+      font-size: 40px;
+      text-align: center;
+      max-width: 227px;
+      margin-bottom: 40px;
+    }
+
+    @media (min-width: 1440px) {
+      text-align: left;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+    &-flex {
+      display: flex;
+      gap: 4%;
+
+      > *:last-child {
+        width: 57%;
+      }
+    }
+  }
+
+  // &__error-message {
+  //   transition: .2s;
+  // }
 }
